[gd_scene load_steps=2 format=3 uid="uid://janudd5ujhda"]

[ext_resource type="Script" uid="uid://c14p2qihb2pn8" path="res://scripts/start_menu.gd" id="1_1smd"]

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1smd")

[node name="Center" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Center"]
layout_mode = 2
theme_override_constants/separation = 24
alignment = 1

[node name="Title" type="Label" parent="Center/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 44
text = "公園相遇"
horizontal_alignment = 1

[node name="LangLabel" type="Label" parent="Center/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "語言"
horizontal_alignment = 1

[node name="LangRow" type="HBoxContainer" parent="Center/VBox"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="ZhBtn" type="Button" parent="Center/VBox/LangRow"]
layout_mode = 2
text = "中文"

[node name="EnBtn" type="Button" parent="Center/VBox/LangRow"]
layout_mode = 2
text = "English"

[node name="StartBtn" type="Button" parent="Center/VBox"]
custom_minimum_size = Vector2(260, 56)
layout_mode = 2
text = "開始遊戲"
